syntax = "proto3";

option csharp_namespace = "gRPCAdapter";

package auth;

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 id = 1;
  string accessToken = 2;
}
